# unilang

./: .env.example  .gitignore  README.md  README.pt-BR.md  README_pt-BR.md  benchmark_e2e_multilingual.py  benchmark_runtime.py  pyproject.toml
scripts/: README.md
scripts/benchmarks/: benchmark_e2e_minimax.py  benchmark_e2e_minimax_controlled.py  benchmark_quick.py  run_bench_vps.sh  run_controlled_vps.sh  run_quick_vps.sh
scripts/dev/: check_types.py  check_unilang_api.py
scripts/smoke/: test_check_minimax.py  test_import.py  test_mediator_import.py  test_minimax_translation.py  test_minimax_vps.py  test_unilang_integration.py
src/unilang/: __init__.py  config.py  content_classifier.py  language_cache.py  language_detector.py  language_policy.py  language_runtime.py  minimax_adapter.py  prompt_artifacts.py  translation_adapter.py  types.py  variant_store.py
tests/: test_content_classifier.py  test_language_cache.py  test_language_detector.py  test_language_policy.py  test_language_runtime.py  test_variant_store.py
