[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unilang"
version = "0.1.0"
description = "Language mediation runtime primitives for multilingual agent systems."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "maelrx"}
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
minimax = [
  "anthropic>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
